# ematching_join_experiments

./: .gitignore  Cargo.toml  README.md  RUN_LOCALLY.md  colab_ematching_gpu.ipynb  laptop_ematching_bench.ipynb  requirements.txt  results.csv
cuda/: README.md  ematching_gpu.cu
src/: arrow_store.rs  generator.rs  main.rs  matchers.rs
